--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,6 +27,12 @@ r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 
 
 r.Shadow.Virtual.Enable=1
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
+r.RayTracing.Skylight=True
+r.RayTracing.Shadows=True
+r.Lumen.HardwareRayTracing=True
+r.Lumen.TraceMeshSDFs=0
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
