--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,4 +8,11 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
+Build=Always
+ForDistribution=False
+UsePakFile=True
+bUseIoStore=True
+HttpChunkInstallDataDirectory=(Path="https://github.com/Mermorex/TDaming_Show_Room.git")
+bBuildHttpChunkInstallData=True
+StagingDirectory=(Path="https:/github.com/Mermorex/TDaming_Show_Room.git")
 
